# 20171003_Doorbell_SDK_v1.2.3.1_758862

./: .gitignore  README.md
ITE_Castor3_SDK/: wizard
ITE_Castor3_SDK/doc/: itu_guidesigner.h
ITE_Castor3_SDK/doc/html/: annotated.html  arm_nor_writer_8h.html  arm_nor_writer_8h_source.html  arm_nor_writer_utility_8h.html  arm_nor_writer_utility_8h_source.html  audio_8c.html  audio_8c_source.html  audio_8h.html  audio_8h_source.html  audio__record_8c.html  audio__record_8c_source.html  boot.html  boot_8h.html  boot_8h_source.html  calllog_8c.html  calllog_8c_source.html  capture_8c.html  capture_8c_source.html  classes.html  custom__target__board_8h.html  custom__target__board_8h_source.html  custom_target_board.html  dataconv.html  dataconv_8h.html  dataconv_8h_source.html  device.html  device_8h.html  device_8h_source.html  device_amplifier.html  device_backlight.html  device_battery.html  device_dac.html  device_gsensor.html  device_headset.html  device_iic.html  device_keypad.html  device_led.html  device_rtc.html  device_spi.html  device_uart.html  (+1167 more)
ITE_Castor3_SDK/project/COMMAX_7.0H/: PAGE_HOME.c  PAGE_HOME.c.bak  PAGE_MONITOR.c  PAGE_MONITOR.c.bak  audio.c  config.c.bak  config.ini  config.rar  function_table.c  function_table.c.bak  ite_avienc.c  page_intercom_ing.c  page_media.c  page_setting.c  (+29 more)
ITE_Castor3_SDK/project/test_fs/: CMakeLists.txt  Kconfig  Kconfig.win32  test_drive.c  test_fs.c  test_ntfs.c
ITE_Castor3_SDK/project/test_fs/fat/: test_f.c  test_f.h  test_fat.c  testdrv_f.c  testdrv_f.h  testport_f.c
ITE_Castor3_SDK/sdk/: Kconfig  def.cmake
(+162 files in other folders)
